--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="header-bar container">
-            <a href="#" class="logo"><img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/logo.png" alt="logo"></a>
+            <a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
             <a href="#" class="programFee">方案費用</a>
         </div>
         <div class="content container">
@@ -25,17 +25,17 @@
             <h2 class="font-32-46-b">三大平台，我來搞定</h2>
             <ul>
                 <li>
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/messenger.svg" alt="messenger">
+                    <img src="images/messenger.svg" alt="messenger">
                     <h3 class="font-24-35-b">Facebook Messenger</h3>
                     <p class="font-16-24">結合粉絲專頁，提高粉絲互動率<br>有效經營品牌社群</p>
                 </li>
                 <li>
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/line.svg" alt="line">
+                    <img src="images/line.svg" alt="line">
                     <h3 class="font-24-35-b">LINE 官方帳號</h3>
                     <p class="font-16-24">融入日常生活，精準傳遞品牌資訊<br>打造個人化專屬服務</p>
                 </li>
                 <li>
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/instagram.svg" alt="instagram">
+                    <img src="images/instagram.svg" alt="instagram">
                     <h3 class="font-24-35-b">Instagram 商業帳號</h3>
                     <p class="font-16-24">貼近粉絲，提升品牌自然聲量<br>行銷、抽獎一站完成</p>
                 </li>
@@ -46,28 +46,28 @@
             <p class="font-20-29">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
             <ul>
                 <li class="font-16-24">
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/ch01.svg" alt="ch01">
+                    <img src="images/ch01.svg" alt="ch01">
                     <div class="roleBody">
                         <h3>活動主</h3>
                         <p>用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
                     </div>
                 </li>
                 <li>
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/ch02.svg" alt="ch02">
+                    <img src="images/ch02.svg" alt="ch02">
                     <div class="roleBody">
                         <h3>創作者</h3>
                         <p>自由設計互動腳本 輕鬆整合各項數據</p>
                     </div>
                 </li>
                 <li>
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/ch03.svg" alt="ch03">
+                    <img src="images/ch03.svg" alt="ch03">
                     <div class="roleBody">
                         <h3>企業品牌</h3>
                         <p>多元資料整合，做出服務差異化 幫助企業加速決策</p>
                     </div>
                 </li>
                 <li>
-                    <img src="https://github.com/yunniyunyun/ChatTalker/blob/main/images/ch04.svg" alt="ch04">
+                    <img src="images/ch04.svg" alt="ch04">
                     <div class="roleBody">
                         <h3>其他</h3>
                         <p>創造更多可能...</p>
@@ -116,11 +116,11 @@
                             <h4>Lina 執行長</h4>
                         </div>
                         <ul class="star">
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
                         </ul>
                     </div>
                 </li>
