--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                             <h4>Zoe 活動長</h4>
                         </div>
                         <ul class="star">
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
                         </ul>
                     </div>
                 </li>
@@ -150,11 +150,11 @@
                             <h4>HowBig</h4>
                         </div>
                         <ul class="star">
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
-                            <li><img src="../images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
+                            <li><img src="images/icon_star.svg" alt="icon_star"></li>
                         </ul>
                     </div>
                 </li>
