feat: add front page rwd

--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
             <a href="#" class="programFee">方案費用</a>
         </div>
         <div class="content container">
-            <h1 class="font-18-26">ChatTalker 最全面的聊天機器人</h3>
-            <h2 class="font-48-70-b">你愛我像誰？<br>扮演什麼角色我都會</h2>
-            <h3 class="font-20-29">Facebook、Instagram、LINE 聊天機器人解決方案</h3>
+            <h1 class="font-18-26-b s-font-16-24">ChatTalker 最全面的聊天機器人</h3>
+            <h2 class="font-48-70-b s-font-32-46-b">你愛我像誰？<br>扮演什麼角色我都會</h2>
+            <h3 class="font-20-29 s-font-16-24">Facebook、Instagram、LINE 聊天機器人解決方案</h3>
         </div>
     </header>
     <div class="top"><a class="font-20-29" href="#">TOP</a></div>
     <main>
         <div class="platform">
-            <h2 class="font-32-46-b">三大平台，我來搞定</h2>
+            <h2 class="font-32-46-b s-font-28-40-b">三大平台，我來搞定</h2>
             <ul>
                 <li>
                     <img src="images/messenger.svg" alt="messenger">
-                    <h3 class="font-24-35-b">Facebook Messenger</h3>
+                    <h3 class="font-24-35-b s-font-18-26-b">Facebook Messenger</h3>
                     <p class="font-16-24">結合粉絲專頁，提高粉絲互動率<br>有效經營品牌社群</p>
                 </li>
                 <li>
                     <img src="images/line.svg" alt="line">
-                    <h3 class="font-24-35-b">LINE 官方帳號</h3>
+                    <h3 class="font-24-35-b s-font-18-26-b">LINE 官方帳號</h3>
                     <p class="font-16-24">融入日常生活，精準傳遞品牌資訊<br>打造個人化專屬服務</p>
                 </li>
                 <li>
                     <img src="images/instagram.svg" alt="instagram">
-                    <h3 class="font-24-35-b">Instagram 商業帳號</h3>
+                    <h3 class="font-24-35-b s-font-18-26-b">Instagram 商業帳號</h3>
                     <p class="font-16-24">貼近粉絲，提升品牌自然聲量<br>行銷、抽獎一站完成</p>
                 </li>
             </ul>
         </div>
         <div class="role container">
-            <h2 class="font-32-46-b">任何的角色，我都能給</h2>
+            <h2 class="font-32-46-b s-font-28-40-b">任何的角色，我都能給</h2>
             <p class="font-20-29">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
             <ul>
                 <li class="font-16-24">
@@ -77,8 +77,8 @@
         </div>
         <div class="feature container">
             <div class="featureContent">
-                <h2 class="font-32-46-b">快速了解客戶輪廓<br>建立品牌流量池</h2>
-                <p class="font-18-26">深入用戶日常，成為用戶貼身好友<br>精準傳遞品牌資訊，打造個人化專屬服務<br>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
+                <h2 class="font-32-46-b s-font-28-40-b">快速了解客戶輪廓<br>建立品牌流量池</h2>
+                <p class="font-18-26 s-font-16-24">深入用戶日常，成為用戶貼身好友<br>精準傳遞品牌資訊，打造個人化專屬服務<br>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
                 <a class="btn" href="#">方案費用</a>
             </div>
             <ul>
@@ -105,7 +105,7 @@
             </ul>
         </div>
         <div class="evaluate container">
-            <h2 class="font-32-46-b">好評如潮</h2>
+            <h2 class="font-32-46-b s-font-28-40-b">好評如潮</h2>
             <ul class="userList font-16-24">
                 <li>
                     <div class="userPic"></div>
@@ -124,7 +124,7 @@
                         </ul>
                     </div>
                 </li>
-                <li>
+                <li class="s-display-n">
                     <div class="userPic"></div>
                     <p>團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</p>
                     <div class="userBody">
@@ -141,7 +141,7 @@
                         </ul>
                     </div>
                 </li>
-                <li>
+                <li class="s-display-n">
                     <div class="userPic"></div>
                     <p>經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</p>
                     <div class="userBody">
@@ -169,7 +169,7 @@
     </main>
     <footer>
         <div class="add">
-            <h2 class="font-32-46-b">\ 美好用戶體驗，從對話開始 /</h2>
+            <h2 class="font-32-46-b s-font-24-35-b">\ 美好用戶體驗，從對話開始 /</h2>
             <a class="btn" href="#">方案費用</a>
         </div>
         <div class="copyright font-16-24">
