fix: header-bar and platform rwd

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-bar container">
+        <div class="header-bar">
             <a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
             <a href="#" class="programFee">方案費用</a>
         </div>
