feat: add program fee page

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.css">
-    <title>Document</title>
+    <title>chatTalker</title>
 </head>
-<body>
+<body class="indexBody">
     <header class="header">
         <div class="header-bar">
             <a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
-            <a href="#" class="programFee">方案費用</a>
+            <a href="programFee.html" class="programFee">方案費用</a>
         </div>
         <div class="content container">
-            <h1 class="font-18-26-b s-font-16-24">ChatTalker 最全面的聊天機器人</h3>
+            <h1 class="font-18-26-b s-font-16-24">ChatTalker 最全面的聊天機器人</h1>
             <h2 class="font-48-70-b s-font-32-46-b">你愛我像誰？<br>扮演什麼角色我都會</h2>
             <h3 class="font-20-29 s-font-16-24">Facebook、Instagram、LINE 聊天機器人解決方案</h3>
         </div>
