fix: program fee background

--- a/programFee.html
+++ b/programFee.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/all.css">
     <title>chatTalker</title>
 </head>
-<body>
+<body class="bg-ball">
     <header class="program">
         <div class="program-bg"></div>
         <div class="header-bar">
