feat: add program fee page rwd

--- a/programFee.html
+++ b/programFee.html
@@ -16,18 +16,18 @@
         </div>
         <div class="content container">
             <h1 class="font-48-70-b s-font-32-46-b">計費方式說明</h1>
-            <h3 class="font-16-24">聊天機器人幫你實現增粉、轉單、客服等目標</h3>
+            <h3 class="font-16-24 s-font-16-24">聊天機器人幫你實現增粉、轉單、客服等目標</h3>
         </div>
     </header>
     <div class="top"><a class="font-20-29" href="#">TOP</a></div>
     <main class="programList">
-        <h2 class="font-32-46-b">彈性選擇，提供您選擇最適合的方案</h2>
+        <h2 class="font-32-46-b s-font-28-40-b">彈性選擇，提供您選擇最適合的方案</h2>
         <ul class="peopleChoose">
-            <li><a class="font-18-26 choose" href="#">10000位</a></li>
-            <li><a class="font-18-26" href="#">15000位</a></li>
-            <li><a class="font-18-26" href="#">20000位</a></li>
-            <li><a class="font-18-26" href="#">25000位</a></li>
-            <li><a class="font-18-26" href="#">>25000位</a></li>
+            <li><a class="font-18-26 s-font-16-24 choose" href="#">10000位</a></li>
+            <li><a class="font-18-26 s-font-16-24" href="#">15000位</a></li>
+            <li><a class="font-18-26 s-font-16-24" href="#">20000位</a></li>
+            <li><a class="font-18-26 s-font-16-24" href="#">25000位</a></li>
+            <li><a class="font-18-26 s-font-16-24" href="#">>25000位</a></li>
         </ul>
         <ul class="feeList">
             <li>
@@ -37,15 +37,15 @@
                     <div class="feeFormula">
                         <div>
                             <h4 class="font-12-17">訂閱用戶數</h4>
-                            <span class="font-32-35 font-c-main">10000</span><span class="font-12-17 font-c-main">位</span>
+                            <span class="font-32-35 font-c-main s-font-28-32">10000</span><span class="font-12-17 font-c-main">位</span>
                         </div>
-                        <p class="font-29-42">=</p>
+                        <p class="font-29-42 s-font-24-35">=</p>
                         <div>
                             <h4 class="font-12-17">試算每月的費用</h4>
-                            <span class="font-32-35">600</span><span class="font-12-17">TWD</span>
+                            <span class="font-32-35 s-font-28-32">600</span><span class="font-12-17">TWD</span>
                         </div>
                     </div>
-                    <ul class="functionList">
+                    <ul class="functionList s-font-14-20">
                         <li>
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>支援 Messenger / Instagram 或 LINE 渠道</p>
@@ -73,15 +73,15 @@
                     <div class="feeFormula">
                         <div>
                             <h4 class="font-12-17">訂閱用戶數</h4>
-                            <span class="font-32-35 font-c-main">10000</span><span class="font-12-17 font-c-main">位</span>
+                            <span class="font-32-35 font-c-main s-font-28-32">10000</span><span class="font-12-17 font-c-main">位</span>
                         </div>
-                        <p class="font-29-42">=</p>
+                        <p class="font-29-42 s-font-24-35">=</p>
                         <div>
                             <h4 class="font-12-17">試算每月的費用</h4>
-                            <span class="font-32-35">1600</span><span class="font-12-17">TWD</span>
+                            <span class="font-32-35 s-font-28-32">1600</span><span class="font-12-17">TWD</span>
                         </div>
                     </div>
-                    <ul class="functionList">
+                    <ul class="functionList s-font-14-20">
                         <li>
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>支援 Messenger / Instagram 或 LINE 渠道</p>
@@ -104,8 +104,8 @@
             </li>
         </ul>
         <div class="QAList">
-            <h2 class="font-32-46-b">常見問題</h2>
-            <ul class="font-18-28">
+            <h2 class="font-32-46-b s-font-28-40-b">常見問題</h2>
+            <ul class="font-18-28 s-font-16-24">
                 <li>我要怎麼變更方案
                     <p></p>
                 </li>
