feat: add jquery on choose people and QA

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="featureContent">
                 <h2 class="font-32-46-b s-font-28-40-b">快速了解客戶輪廓<br>建立品牌流量池</h2>
                 <p class="font-18-26 s-font-16-24">深入用戶日常，成為用戶貼身好友<br>精準傳遞品牌資訊，打造個人化專屬服務<br>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
-                <a class="btn" href="#">方案費用</a>
+                <a class="btn" href="programFee.html">方案費用</a>
             </div>
             <ul>
                 <li>
@@ -170,7 +170,7 @@
     <footer>
         <div class="add">
             <h2 class="font-32-46-b s-font-24-35-b">\ 美好用戶體驗，從對話開始 /</h2>
-            <a class="btn" href="#">方案費用</a>
+            <a class="btn" href="programFee.html">方案費用</a>
         </div>
         <div class="copyright font-16-24">
             <p>© 2022 chatTalker. All Rights Reserved.</p>
