--- a/programFee.html
+++ b/programFee.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/all.js"></script>
     <title>chatTalker</title>
 </head>
 <body class="bg-ball">
@@ -106,11 +108,11 @@
         <div class="QAList">
             <h2 class="font-32-46-b s-font-28-40-b">常見問題</h2>
             <ul class="font-18-28 s-font-16-24">
-                <li>我要怎麼變更方案
-                    <p></p>
+                <li>我要怎麼變更方案？
+                    <p>請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</p>
                 </li>
                 <li>如果我沒有LINE官方帳號怎麼辦？
-                    <p></p>
+                    <p>沒關係的，只要您是我們任何一個方案的夥伴，我們的專員可以協助辦理哦！</p>
                 </li>
                 <li class="active">非上班日有客服支援嗎？
                     <p class="font-16-32 show">當然哦！我們錢都收了，不會拋棄你的！<br>請您直接來我們公司，我們假日也都在辦公室。</p>
