feat: optimize jQuery

--- a/programFee.html
+++ b/programFee.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/all.js"></script>
     <title>chatTalker</title>
 </head>
 <body class="bg-ball">
@@ -31,6 +29,7 @@
             <li><a class="font-18-26 s-font-16-24" href="#">25000位</a></li>
             <li><a class="font-18-26 s-font-16-24" href="#">>25000位</a></li>
         </ul>
+        <!-- <div class="ttt">111</div> -->
         <ul class="feeList">
             <li>
                 <h3 class="font-24-35-b">基本版</h3>
@@ -39,12 +38,12 @@
                     <div class="feeFormula">
                         <div>
                             <h4 class="font-12-17">訂閱用戶數</h4>
-                            <span class="font-32-35 font-c-main s-font-28-32">10000</span><span class="font-12-17 font-c-main">位</span>
+                            <span class="font-32-35 font-c-main s-font-28-32 choose-p">10000</span><span class="font-12-17 font-c-main">位</span>
                         </div>
                         <p class="font-29-42 s-font-24-35">=</p>
                         <div>
                             <h4 class="font-12-17">試算每月的費用</h4>
-                            <span class="font-32-35 s-font-28-32">600</span><span class="font-12-17">TWD</span>
+                            <span class="font-32-35 s-font-28-32 choose-pri">600</span><span class="font-12-17">TWD</span>
                         </div>
                     </div>
                     <ul class="functionList s-font-14-20">
@@ -75,12 +74,12 @@
                     <div class="feeFormula">
                         <div>
                             <h4 class="font-12-17">訂閱用戶數</h4>
-                            <span class="font-32-35 font-c-main s-font-28-32">10000</span><span class="font-12-17 font-c-main">位</span>
+                            <span class="font-32-35 font-c-main s-font-28-32 choose-p">10000</span><span class="font-12-17 font-c-main">位</span>
                         </div>
                         <p class="font-29-42 s-font-24-35">=</p>
                         <div>
                             <h4 class="font-12-17">試算每月的費用</h4>
-                            <span class="font-32-35 s-font-28-32">1600</span><span class="font-12-17">TWD</span>
+                            <span class="font-32-35 s-font-28-32 choose-pri-h">1600</span><span class="font-12-17">TWD</span>
                         </div>
                     </div>
                     <ul class="functionList s-font-14-20">
@@ -125,5 +124,7 @@
             <p>© 2022 chatTalker. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
