--- a/index.html
+++ b/index.html
@@ -176,5 +176,7 @@
             <p>© 2022 chatTalker. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
