--- a/programFee.html
+++ b/programFee.html
@@ -8,58 +8,57 @@
     <title>chatTalker</title>
 </head>
 <body class="bg-ball">
-    <header class="program">
+    <header class="program mb-100 s-mb-60">
         <div class="program-bg"></div>
-        <div class="header-bar">
+        <div class="header-bar mb-92 s-mb-48">
             <a href="index.html" class="logo"><img src="images/logo.png" alt="logo"></a>
             <a href="programFee.html" class="programFee">方案費用</a>
         </div>
         <div class="content container">
-            <h1 class="font-48-70-b s-font-32-46-b">計費方式說明</h1>
+            <h1 class="font-48-70-b s-font-32-46-b mb-16">計費方式說明</h1>
             <h3 class="font-16-24 s-font-16-24">聊天機器人幫你實現增粉、轉單、客服等目標</h3>
         </div>
     </header>
     <div class="top"><a class="font-20-29" href="#">TOP</a></div>
     <main class="programList">
-        <h2 class="font-32-46-b s-font-28-40-b">彈性選擇，提供您選擇最適合的方案</h2>
-        <ul class="peopleChoose">
+        <h2 class="font-32-46-b s-font-28-40-b mb-48 s-mb-24">彈性選擇，提供您選擇最適合的方案</h2>
+        <ul class="peopleChoose mb-48 s-mb-32">
             <li><a class="font-18-26 s-font-16-24 choose" href="#">10000位</a></li>
             <li><a class="font-18-26 s-font-16-24" href="#">15000位</a></li>
             <li><a class="font-18-26 s-font-16-24" href="#">20000位</a></li>
             <li><a class="font-18-26 s-font-16-24" href="#">25000位</a></li>
             <li><a class="font-18-26 s-font-16-24" href="#">>25000位</a></li>
         </ul>
-        <!-- <div class="ttt">111</div> -->
-        <ul class="feeList">
-            <li>
+        <ul class="feeList mb-100 s-mb-60">
+            <li class="s-mb-24">
                 <h3 class="font-24-35-b">基本版</h3>
-                <div class="feeBody font-16-24">
-                    <p>提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
-                    <div class="feeFormula">
+                <div class="feeBody font-16-24 mb-42 s-mb-24">
+                    <p class="mb-32 s-mb-24">提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
+                    <div class="feeFormula mb-32 s-mb-24">
                         <div>
-                            <h4 class="font-12-17">訂閱用戶數</h4>
+                            <h4 class="font-12-17 mb-8">訂閱用戶數</h4>
                             <span class="font-32-35 font-c-main s-font-28-32 choose-p">10000</span><span class="font-12-17 font-c-main">位</span>
                         </div>
                         <p class="font-29-42 s-font-24-35">=</p>
                         <div>
-                            <h4 class="font-12-17">試算每月的費用</h4>
+                            <h4 class="font-12-17 mb-8">試算每月的費用</h4>
                             <span class="font-32-35 s-font-28-32 choose-pri">600</span><span class="font-12-17">TWD</span>
                         </div>
                     </div>
                     <ul class="functionList s-font-14-20">
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>支援 Messenger / Instagram 或 LINE 渠道</p>
                         </li>
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>10 個進階套件</p>
                         </li>
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>可設定 50 種分眾標籤</p>
                         </li>
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>客服人機轉接</p>
                         </li>
@@ -69,33 +68,33 @@
             </li>
             <li>
                 <h3 class="font-24-35-b">標準版</h3>
-                <div class="feeBody font-16-24">
-                    <p>建立企業流量池，全通路數據整合與交換<br>高可靠性服務</p>
-                    <div class="feeFormula">
+                <div class="feeBody font-16-24 mb-42 s-mb-24">
+                    <p class="mb-32 s-mb-24">建立企業流量池，全通路數據整合與交換<br>高可靠性服務</p>
+                    <div class="feeFormula mb-32 s-mb-24">
                         <div>
-                            <h4 class="font-12-17">訂閱用戶數</h4>
+                            <h4 class="font-12-17 mb-8">訂閱用戶數</h4>
                             <span class="font-32-35 font-c-main s-font-28-32 choose-p">10000</span><span class="font-12-17 font-c-main">位</span>
                         </div>
                         <p class="font-29-42 s-font-24-35">=</p>
                         <div>
-                            <h4 class="font-12-17">試算每月的費用</h4>
+                            <h4 class="font-12-17 mb-8">試算每月的費用</h4>
                             <span class="font-32-35 s-font-28-32 choose-pri-h">1600</span><span class="font-12-17">TWD</span>
                         </div>
                     </div>
                     <ul class="functionList s-font-14-20">
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>支援 Messenger / Instagram 或 LINE 渠道</p>
                         </li>
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>20 個進階及行銷互動套件</p>
                         </li>
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>可設定 500 種分眾標籤</p>
                         </li>
-                        <li>
+                        <li class="mb-16">
                             <img src="./images/icon_check.svg" alt="icon_check">
                             <p>客服人機轉接＋自動指派專員處理</p>
                         </li>
@@ -104,17 +103,17 @@
                 <a class="btn" href="#">立即體驗</a>
             </li>
         </ul>
-        <div class="QAList">
+        <div class="QAList mb-100 s-mb-60">
             <h2 class="font-32-46-b s-font-28-40-b">常見問題</h2>
             <ul class="font-18-28 s-font-16-24">
-                <li>我要怎麼變更方案？
-                    <p>請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</p>
+                <li class="mb-16">我要怎麼變更方案？
+                    <p class="mt-24 s-mt-16">請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</p>
                 </li>
-                <li>如果我沒有LINE官方帳號怎麼辦？
-                    <p>沒關係的，只要您是我們任何一個方案的夥伴，我們的專員可以協助辦理哦！</p>
+                <li class="mb-16">如果我沒有LINE官方帳號怎麼辦？
+                    <p class="mt-24 s-mt-16">沒關係的，只要您是我們任何一個方案的夥伴，我們的專員可以協助辦理哦！</p>
                 </li>
-                <li class="active">非上班日有客服支援嗎？
-                    <p class="font-16-32 show">當然哦！我們錢都收了，不會拋棄你的！<br>請您直接來我們公司，我們假日也都在辦公室。</p>
+                <li class="mb-16 active">非上班日有客服支援嗎？
+                    <p class="mt-24 s-mt-16 font-16-32 show">當然哦！我們錢都收了，不會拋棄你的！<br>請您直接來我們公司，我們假日也都在辦公室。</p>
                 </li>
             </ul>
         </div>
