--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
             <h2 class="font-32-46-b s-font-28-40-b mb-16">任何的角色，我都能給</h2>
             <p class="font-20-29 mb-48 s-mb-32">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
             <ul class="font-16-24">
-                <li class="s-mb-24">
+                <li class="card s-mb-24">
                     <img src="images/ch01.svg" alt="ch01">
                     <div class="roleBody">
                         <h3 class="mb-16">活動主</h3>
                         <p>用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
                     </div>
                 </li>
-                <li class="s-mb-24">
+                <li class="card s-mb-24">
                     <img src="images/ch02.svg" alt="ch02">
                     <div class="roleBody">
                         <h3 class="mb-16">創作者</h3>
                         <p>自由設計互動腳本 輕鬆整合各項數據</p>
                     </div>
                 </li>
-                <li class="s-mb-24">
+                <li class="card s-mb-24">
                     <img src="images/ch03.svg" alt="ch03">
                     <div class="roleBody">
                         <h3 class="mb-16">企業品牌</h3>
                         <p>多元資料整合，做出服務差異化 幫助企業加速決策</p>
                     </div>
                 </li>
-                <li>
+                <li class="card">
                     <img src="images/ch04.svg" alt="ch04">
                     <div class="roleBody">
                         <h3 class="mb-16">其他</h3>
@@ -82,23 +82,23 @@
                 <a class="btn" href="programFee.html">方案費用</a>
             </div>
             <ul>
-                <li class="s-mb-24">
-                    <div class="icon mb-24"></div>
+                <li class="card s-mb-24">
+                    <div class="icon mb-24 card"></div>
                     <h3 class="font-18-26 mb-16 s-mb-20">無敵轉換術</h3>
                     <p class="font-16-24">精準掌握客群來源<br>分析用戶轉化流程</p>
                 </li>
-                <li class="s-mb-24">
-                    <div class="icon mb-24"></div>
+                <li class="card s-mb-24">
+                    <div class="icon mb-24 card"></div>
                     <h3 class="font-18-26 mb-16 s-mb-20">聊天機器人</h3>
                     <p class="font-16-24">66款聊天機器人模組<br>自由設計聊天流程</p>
                 </li>
-                <li class="s-mb-24">
-                    <div class="icon mb-24"></div>
+                <li class="card s-mb-24">
+                    <div class="icon mb-24 card"></div>
                     <h3 class="font-18-26 mb-16 s-mb-20">一站式訊息中心</h3>
                     <p class="font-16-24">整合Messenger、LINE和IG三大平台訊息</p>
                 </li>
-                <li>
-                    <div class="icon mb-24"></div>
+                <li class="card s-mb-24">
+                    <div class="icon mb-24 card"></div>
                     <h3 class="font-18-26 mb-16 s-mb-20">群發訊息</h3>
                     <p class="font-16-24">自由選定特定受眾<br>精準推送群發訊息</p>
                 </li>
@@ -107,8 +107,8 @@
         <div class="evaluate container mb-100 s-mb-60">
             <h2 class="font-32-46-b s-font-28-40-b mb-104 s-mb-88">好評如潮</h2>
             <ul class="userList font-16-24 mb-24 s-mb-16">
-                <li>
-                    <div class="userPic"></div>
+                <li class="card">
+                    <div class="userPic card"></div>
                     <p class="mb-24 s-mb-16">原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，讓我們公司的產品用更活潑的方式讓使用者認識。</p>
                     <div class="userBody">
                         <div class="userInfo">
@@ -124,8 +124,8 @@
                         </ul>
                     </div>
                 </li>
-                <li class="s-display-n">
-                    <div class="userPic"></div>
+                <li class="card s-display-n">
+                    <div class="userPic card"></div>
                     <p class="mb-24">團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</p>
                     <div class="userBody">
                         <div class="userInfo">
@@ -141,8 +141,8 @@
                         </ul>
                     </div>
                 </li>
-                <li class="s-display-n">
-                    <div class="userPic"></div>
+                <li class="card s-display-n">
+                    <div class="userPic card"></div>
                     <p class="mb-24">經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</p>
                     <div class="userBody">
                         <div class="userInfo">
