--- a/programFee.html
+++ b/programFee.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <div class="top"><a class="font-20-29" href="#">TOP</a></div>
-    <main class="programList">
+    <main class="programList container">
         <h2 class="font-32-46-b s-font-28-40-b mb-48 s-mb-24">彈性選擇，提供您選擇最適合的方案</h2>
         <ul class="peopleChoose mb-48 s-mb-32">
             <li><a class="font-18-26 s-font-16-24 choose" href="#">10000位</a></li>
@@ -30,7 +30,7 @@
             <li><a class="font-18-26 s-font-16-24" href="#">>25000位</a></li>
         </ul>
         <ul class="feeList mb-100 s-mb-60">
-            <li class="s-mb-24">
+            <li class="s-mb-24 card">
                 <h3 class="font-24-35-b">基本版</h3>
                 <div class="feeBody font-16-24 mb-42 s-mb-24">
                     <p class="mb-32 s-mb-24">提供中小企業最必要的功能<br>完整建立分眾以達到精準的行銷自動化</p>
@@ -66,7 +66,7 @@
                 </div>
                 <a class="btn" href="#">立即體驗</a>
             </li>
-            <li>
+            <li class="card">
                 <h3 class="font-24-35-b">標準版</h3>
                 <div class="feeBody font-16-24 mb-42 s-mb-24">
                     <p class="mb-32 s-mb-24">建立企業流量池，全通路數據整合與交換<br>高可靠性服務</p>
@@ -106,13 +106,13 @@
         <div class="QAList mb-100 s-mb-60">
             <h2 class="font-32-46-b s-font-28-40-b">常見問題</h2>
             <ul class="font-18-28 s-font-16-24">
-                <li class="mb-16">我要怎麼變更方案？
+                <li class="mb-16 card">我要怎麼變更方案？
                     <p class="mt-24 s-mt-16">請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</p>
                 </li>
-                <li class="mb-16">如果我沒有LINE官方帳號怎麼辦？
+                <li class="mb-16 card">如果我沒有LINE官方帳號怎麼辦？
                     <p class="mt-24 s-mt-16">沒關係的，只要您是我們任何一個方案的夥伴，我們的專員可以協助辦理哦！</p>
                 </li>
-                <li class="mb-16 active">非上班日有客服支援嗎？
+                <li class="mb-16 card active">非上班日有客服支援嗎？
                     <p class="mt-24 s-mt-16 font-16-32 show">當然哦！我們錢都收了，不會拋棄你的！<br>請您直接來我們公司，我們假日也都在辦公室。</p>
                 </li>
             </ul>
