--- a/programFee.html
+++ b/programFee.html
@@ -104,7 +104,7 @@
             </li>
         </ul>
         <div class="QAList mb-100 s-mb-60">
-            <h2 class="font-32-46-b s-font-28-40-b">常見問題</h2>
+            <h2 class="font-32-46-b s-font-28-40-b mb-48 s-mb-32">常見問題</h2>
             <ul class="font-18-28 s-font-16-24">
                 <li class="mb-16 card">我要怎麼變更方案？
                     <p class="mt-24 s-mt-16">請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</p>
