--- a/index.html
+++ b/index.html
@@ -41,39 +41,42 @@
                 </li>
             </ul>
         </div>
-        <div class="role container mb-100 s-mb-60">
-            <h2 class="font-32-46-b s-font-28-40-b mb-16">任何的角色，我都能給</h2>
-            <p class="font-20-29 mb-48 s-mb-32">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
-            <ul class="font-16-24">
-                <li class="card s-mb-24">
-                    <img src="images/ch01.svg" alt="ch01">
-                    <div class="roleBody">
-                        <h3 class="mb-16">活動主</h3>
-                        <p>用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
-                    </div>
-                </li>
-                <li class="card s-mb-24">
-                    <img src="images/ch02.svg" alt="ch02">
-                    <div class="roleBody">
-                        <h3 class="mb-16">創作者</h3>
-                        <p>自由設計互動腳本 輕鬆整合各項數據</p>
-                    </div>
-                </li>
-                <li class="card s-mb-24">
-                    <img src="images/ch03.svg" alt="ch03">
-                    <div class="roleBody">
-                        <h3 class="mb-16">企業品牌</h3>
-                        <p>多元資料整合，做出服務差異化 幫助企業加速決策</p>
-                    </div>
-                </li>
-                <li class="card">
-                    <img src="images/ch04.svg" alt="ch04">
-                    <div class="roleBody">
-                        <h3 class="mb-16">其他</h3>
-                        <p>創造更多可能...</p>
-                    </div>
-                </li>
-            </ul>
+        <div class="role-bg">
+            <div class="hero_ball02"></div>
+            <div class="role container mb-100 s-mb-60">
+                <h2 class="font-32-46-b s-font-28-40-b mb-16">任何的角色，我都能給</h2>
+                <p class="font-20-29 mb-48 s-mb-32">量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
+                <ul class="font-16-24">
+                    <li class="card s-mb-24">
+                        <img src="images/ch01.svg" alt="ch01">
+                        <div class="roleBody">
+                            <h3 class="mb-16">活動主</h3>
+                            <p>用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
+                        </div>
+                    </li>
+                    <li class="card s-mb-24">
+                        <img src="images/ch02.svg" alt="ch02">
+                        <div class="roleBody">
+                            <h3 class="mb-16">創作者</h3>
+                            <p>自由設計互動腳本 輕鬆整合各項數據</p>
+                        </div>
+                    </li>
+                    <li class="card s-mb-24">
+                        <img src="images/ch03.svg" alt="ch03">
+                        <div class="roleBody">
+                            <h3 class="mb-16">企業品牌</h3>
+                            <p>多元資料整合，做出服務差異化 幫助企業加速決策</p>
+                        </div>
+                    </li>
+                    <li class="card">
+                        <img src="images/ch04.svg" alt="ch04">
+                        <div class="roleBody">
+                            <h3 class="mb-16">其他</h3>
+                            <p>創造更多可能...</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="feature container mb-100 s-mb-60">
             <div class="featureContent s-mb-32">
